test_regress/t/t_tagged.out
%Error-UNSUPPORTED: t/t_tagged.v:10:6: Unsupported: void (for tagged unions)
   10 |      void m_invalid;
      |      ^~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_tagged.v:19:14: Unsupported: tagged union
   19 |          u = tagged m_invalid;
      |              ^~~~~~
%Error-UNSUPPORTED: t/t_tagged.v:24:7: Unsupported: case matches (for tagged union)
   24 |       case (u) matches
      |       ^~~~
%Error-UNSUPPORTED: t/t_tagged.v:28:7: Unsupported: case matches (for tagged union)
   28 |       case (u) matches
      |       ^~~~
%Error-UNSUPPORTED: t/t_tagged.v:29:9: Unsupported: tagged union
   29 |         tagged m_invalid: ;
      |         ^~~~~~
%Error-UNSUPPORTED: t/t_tagged.v:30:9: Unsupported: tagged union
   30 |         tagged m_int: $stop;
      |         ^~~~~~
%Error-UNSUPPORTED: t/t_tagged.v:33:13: Unsupported: matches operator
   33 |       if (u matches tagged m_invalid) ;
      |             ^~~~~~~
%Error-UNSUPPORTED: t/t_tagged.v:33:21: Unsupported: tagged union
   33 |       if (u matches tagged m_invalid) ;
      |                     ^~~~~~
%Error-UNSUPPORTED: t/t_tagged.v:34:13: Unsupported: matches operator
   34 |       if (u matches tagged m_int .n) $stop;
      |             ^~~~~~~
%Error-UNSUPPORTED: t/t_tagged.v:34:21: Unsupported: '{} tagged patterns
   34 |       if (u matches tagged m_int .n) $stop;
      |                     ^~~~~~
%Error-UNSUPPORTED: t/t_tagged.v:34:34: Unsupported: '{} tagged patterns
   34 |       if (u matches tagged m_int .n) $stop;
      |                                  ^
%Error-UNSUPPORTED: t/t_tagged.v:36:11: Unsupported: tagged union
   36 |       u = tagged m_int (123);
      |           ^~~~~~
%Error-UNSUPPORTED: t/t_tagged.v:39:7: Unsupported: case matches (for tagged union)
   39 |       case (u) matches
      |       ^~~~
%Error-UNSUPPORTED: t/t_tagged.v:40:9: Unsupported: tagged union
   40 |         tagged m_invalid: $stop;
      |         ^~~~~~
%Error-UNSUPPORTED: t/t_tagged.v:41:9: Unsupported: '{} tagged patterns
   41 |         tagged m_int .n: if (n !== 123) $stop;
      |         ^~~~~~
%Error-UNSUPPORTED: t/t_tagged.v:41:22: Unsupported: '{} tagged patterns
   41 |         tagged m_int .n: if (n !== 123) $stop;
      |                      ^
%Error-UNSUPPORTED: t/t_tagged.v:44:13: Unsupported: matches operator
   44 |       if (u matches tagged m_invalid) $stop;
      |             ^~~~~~~
%Error-UNSUPPORTED: t/t_tagged.v:44:21: Unsupported: tagged union
   44 |       if (u matches tagged m_invalid) $stop;
      |                     ^~~~~~
%Error-UNSUPPORTED: t/t_tagged.v:45:13: Unsupported: matches operator
   45 |       if (u matches tagged m_int .n) if (n != 123) $stop;
      |             ^~~~~~~
%Error-UNSUPPORTED: t/t_tagged.v:45:21: Unsupported: '{} tagged patterns
   45 |       if (u matches tagged m_int .n) if (n != 123) $stop;
      |                     ^~~~~~
%Error-UNSUPPORTED: t/t_tagged.v:45:34: Unsupported: '{} tagged patterns
   45 |       if (u matches tagged m_int .n) if (n != 123) $stop;
      |                                  ^
%Error: t/t_tagged.v:41:30: Can't find definition of variable: 'n'
   41 |         tagged m_int .n: if (n !== 123) $stop;
      |                              ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
